--- a/style.css
+++ b/style.css
@@ -2,16 +2,20 @@
 body {
   background-color: #000;
   margin: 0 auto;
-  max-width: 85%;
+  
+
   
 }
 .kontener{
-margin: 100px auto;
+margin: 0px auto;
+
 }
 
-svg {
-  border: 10px solid white;
-  border-bottom-width: 30px;
+.fullscreen-element {
+    width: 100%;
+    height: 100vh; /* 100% da altura da janela */
+    background-color: #f0f0f0; /* Apenas para ilustração */
+}height: 100vh;
 }
 @media only screen and (max-width:480px){
  svg {
@@ -40,7 +44,7 @@ svg {
 }
 
 .st8 {
-  fill: #fa3757;
+  fill: #TRANS;
 }
 
 .st10 {
