--- a/style.css
+++ b/style.css
@@ -190,3 +190,10 @@ margin: 0px auto;
   }
 }
 
+.fullscreen-element {
+    width: 100%;
+    height: 100vh; /* 100% da altura da janela */
+    background-color: #000; /* Apenas para ilustração */
+}
+
+
